--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "buefy": "^0.8.15",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-izitoast": "^1.2.1",
+    "vue-js-modal": "^1.3.33",
+    "vue-materialize-datatable": "^1.0.2",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
