--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "buefy": "^0.8.15",
+    "axios": "^0.19.2",
+    "buefy": "^0.8.20",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "register-service-worker": "^1.7.1",
+    "rwanda": "^2.0.9",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-izitoast": "^1.2.1",
-    "vue-js-modal": "^1.3.33",
-    "vue-materialize-datatable": "^1.0.2",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vue-js-modal": "^1.3.35",
+    "vue-materialize-datatable": "^1.0.3",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -23,7 +28,7 @@
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
